# Lem_in

./: CMakeLists.txt  Makefile  algorithm.c  arrayways.c  aux_fns.c  aux_fns1.c  aux_fns2.c  aux_fns3.c  bfs.c  lemin.h  links.c  main.c  moveants.c  parsing.c  readrooms.c  way.c
libft/: libft.h
